--- a/window_contact.html
+++ b/window_contact.html
@@ -23,10 +23,11 @@
     <div style="margin:40px auto; max-width:600px; padding:20px; border:1px solid #ccc; border-radius:10px; text-align:center;">
     <p style="margin-bottom:15px; color: var(--icon-change-color);">
         Apabila ada keperluan dalam pekerjaan mengenai perihal data maupun analisis statistika,
-        silahkan untuk menghubungi ke email :
+        silahkan untuk menghubungi ke email :<br><i>(Ini tidak serius)</i><br>
         <b>fadhlyazka@gmail.com</b>
     </p>
     <a href="mailto:fadhlyazka@gmail.com" style="text-decoration:none; color: var(--icon-change-color);">
         <i class="fa-solid fa-envelope" style="font-size:40px;"></i>
     </a>
+
 </div>
